- Remove URL hack and move to URI